# opengram

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Package.resolved  Package.swift  README.md  THIRD_PARTY.md  build-harper.sh
.github/: PULL_REQUEST_TEMPLATE.md
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  future_features.md  v1.2-MILESTONE-AUDIT.md
.serena/: project.yml
OpenGram.xcodeproj/: project.pbxproj
OpenGramEntry/: main.swift
OpenGramTests/: AXCapabilitiesTests.swift  AXCapabilityCacheTests.swift  AXTextEngineTests.swift  AppDelegateWiringTests.swift  AppQuirksTests.swift  CheckOrchestratorTests.swift  ClarityFFITests.swift  DictionaryStoreTests.swift  (+18 more)
harper-bridge/: Cargo.toml
harper-bridge/data/: wordy_phrases.toml
harper-bridge/scripts/: build_wordy_phrases.py  overrides.toml
harper-bridge/scripts/sources/: SOURCES.sha256
harper-bridge/scripts/tests/: test_byte_determinism.py  test_dedup.py  test_nfc.py  test_omit_handling.py  test_overrides.py  test_schema.py  test_severity.py  test_sha256.py  test_toml_emitter.py  test_typography.py
harper-bridge/scripts/tests/fixtures/: expected_wordy_phrases.toml  tiny-overrides.toml  tiny-plainlang.md  tiny-retext.js  tiny-sources.bad.sha256  tiny-sources.sha256
harper-bridge/src/: clarity.rs  lib.rs
harper-bridge/tests/: clar06_overlap_pipeline.rs  fixture_harness.rs  golden_clarity_snapshot.txt  nonflags_corpus.rs  perf_measurements.rs  snapshot_diff.rs
harper-bridge/tests/nonflags/: domain_terms.txt  proper_nouns.txt  quoted_code.txt  retext_issues.txt
(+373 files in other folders)
